terraform/aws/java/mongsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  clusterIP: None 
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
